--- a/content/posts/frontend/vue/00001.md
+++ b/content/posts/frontend/vue/00001.md
@@ -4,3 +4,32 @@ date: 2018-XX-XXTXX:00:00+09:00
 showDate: true
 tags: ["Vue"]
 ---
+
+
+## 前提
+```
+$ npm --version
+6.2.0
+```
+
+## vue-cli インストール
+```shell
+$ npm install -g vue-cli
+? Project name my-project
+? Project description A Vue.js project
+? Author XXX
+? Vue build standalone
+#ここ重要# ? Install vue-router? No
+? Use ESLint to lint your code? Yes
+? Pick an ESLint preset Standard
+? Set up unit tests Yes
+? Pick a test runner jest
+? Setup e2e tests with Nightwatch? Yes
+? Should we run `npm install` for you after the project has been created? (recommended) npm
+```
+
+## 実行
+```
+$ cd my-project
+$ npm run dev
+```
