--- a/content/posts/backend/scala/00003.md
+++ b/content/posts/backend/scala/00003.md
@@ -31,4 +31,14 @@ Seq(Seq(1,2,3), Seq(), Seq(5.6)) flatMap { x => Seq(x.size) } // List(3, 0, 1): 
 Seq(Seq(1,2,3), Seq(), Seq(5.6)) map { x => Seq(x.size) } // List(List(3), List(0), List(1)): scala.collection.Seq
 ```
 
-## 
+## Cake パターン
+NG
+```Scala
+trait UserRepository
+
+object UserRepositoryImpl extends UserRepository
+
+object UserService {
+  val rep = UserRepositoryImpl
+}
+```
