--- a/content/posts/backend/scala/00002.md
+++ b/content/posts/backend/scala/00002.md
@@ -5,11 +5,11 @@ showDate: true
 tags: ["Scala"]
 ---
 
-### 前提
+## 前提
 - vagrant導入済（[vagrat導入手順](#)）
 - FTPクライアントの導入（[cyber](#)）
 
-### 仮想環境のメモリ増設
+## 仮想環境のメモリ増設
 ```
 $ vi Vagrantfile
 config.vm.provider "virtualbox" do |vb|
@@ -22,16 +22,12 @@ end
 $ vagrant reload
 ```
 
-### javaのインストール
-```
-$ sudo yum -y install java-1.8.0-openjdk-devel
-```
+## javaのインストール
+`$ sudo yum -y install java-1.8.0-openjdk-devel`
 
-
-### sbtの導入
-公式サイトのドキュメントより、インストール方法を参照する。  
-https://www.scala-sbt.org/1.x/docs/Installing-sbt-on-Linux.html
-
+## sbtの導入
+- 公式サイトのドキュメントより、インストール方法を参照する。  
+  - https://www.scala-sbt.org/1.x/docs/Installing-sbt-on-Linux.html
 ```
 $ curl https://bintray.com/sbt/rpm/rpm | sudo tee /etc/yum.repos.d/bintray-sbt-rpm.repo
 $ sudo yum install sbt
@@ -42,13 +38,10 @@ $ sbt sbt-version
 Getting org.scala-sbt sbt 1.1.6  (this may take some time)...
 ```
 
-### 文字コードの設定
-```
-$ rpm -ql sbt
+## 文字コードの設定
+`$ rpm -ql sbt`
 
-```
-
-### sbtからScalaを起動
+## sbtからScalaを起動
 ```
 $ mkdir scala_lessons
 $ cd scala_lessons
@@ -59,8 +52,3 @@ sbt:scala_lessons> console
 scala> :quit
 sbt:scala_lessons> exit
 ```
-
-### Atom Editor
-「language-scala」をインストール  
-
-###
