--- a/content/posts/backend/php/00001.md
+++ b/content/posts/backend/php/00001.md
@@ -1,6 +1,72 @@
 ---
-title: default
+title: Laravel 開発環境構築
 date: 2018-10-10T10:00:00+09:00
 showDate: true
 tags: ["php"]
 ---
+
+- Laravel
+  - PHPフレームワーク  
+    - Artisan (アーティザン)
+    Laravel用コマンドラインインターフェース
+- Composer
+  - ライブラリ依存管理ツール
+  - vendorフォルダにダウンロードする
+- Homestead
+  - Laravel公式のvagrant box
+- Vagrant
+  - VirtualBox
+
+## Vagrant インストール
+  - https://www.vagrantup.com/downloads.html
+
+## VirtualBox インストール
+  - https://www.virtualbox.org/wiki/Downloads
+    - OS X hosts
+
+## Homestead vagrant box ダウンロード
+```
+$ vagrant box add laravel/homestead
+```
+
+## Composer インストール
+```
+$ brew install composer
+```
+
+## Homestead インストール
+```
+$ mkdir laravel-app
+$ cd laravel-app
+$ git clone https://github.com/laravel/homestead.git Homestead
+$ cd Homestead
+$ bash init.sh
+Homestead initialized!
+```
+
+## SSH Generate
+```
+$ mkdir ~/.ssh/homestead
+$ ssh-keygen -t rsa
+$ Enter file in which to save the key (/Users/XXX/.ssh/id_rsa): /Users/XXX/.ssh/homestead/id_rsa
+```
+
+## Homestead の設定ファイルの編集
+```
+$ vi Homestead.yaml
+#folders:
+#    - map: ~/code
+folders:
+    - map: ~/code
+```
+
+## 仮想マシンの起動
+```
+$ cd laravel-app/Homestead
+$ vagrant up
+$ vagrant ssh
+$ cd code
+$ composer create-project laravel/laravel --prefer-dist Laravel
+```
+
+##
