--- a/content/posts/common/design/00001.md
+++ b/content/posts/common/design/00001.md
@@ -5,7 +5,9 @@ showDate: true
 tags: ["Clean Architecture"]
 ---
 
-### クリーンアーキテクチャ
+Robert C. Martin
+
+# クリーンアーキテクチャ
 - ビジネスロジックの本質（業務上の関心）
 - 入出力処理等の副作用の隔離
 
@@ -14,39 +16,48 @@ tags: ["Clean Architecture"]
 フレームワークからの独立
 外界との独立（ストアからの独立、UIからの独立）
 
-### Scala sealed
-`final class` 継承できない
-`final def f` オーバーライドできない
-`sealed class` 同一ファイル内のクラスからのみ継承できる
-`sealed class` を継承したクラスは、別ファイルのクラスから継承できる
+# イントロダクション
+- ソフトウェアを「一度だけ」動かすのは、難しいことではない
+- ソフトウェアを「正しく」動かすのは、とても難しい
 
-### 型
-型とは、本来何なのかについて整理
+- ソフトウェアを正しくすると以下のようなことが発生する
+  - 大量のエンジニアが不要になる
+  - 課題の管理が不要になる
+  - 欠陥（バグ）が減る
+  - 変更が容易になる
+  - 労力が最小になり、機能性と柔軟性は最大になる
 
-**=> 型によって取りうる値の範囲（種類を含む）が決まってくる**
+# アーキテクチャ
+- アーキテクチャの魅力は構造である
+- 重要性は変更コストで表現できる
+- プログラムの構成要素をどのように組み立てるか
 
-```
-// java
-int: -2147483648 ~ 2147483647
+# 設計とアーキテクチャ
+- 両者に違いはない
+- ソフトウェアアーキテクチャの目的は、システム開発・保守するための人材を必要最小限にすること
 
-// haskell
-Bool: False|True
-data TraficLight = Red | Yello | Green // 型を自分で定義... Red は TraficLight型の値
-```
+# 数値で見る崩壊とエンジニアの給料
+- リリースごとに生産性は低下、エンジニアの給与は増加
 
-### 型クラス
-型は、値の範囲を決める
-型クラスは、クラスの範囲を決める？
+# 価値
+- 完璧に動作するが変更できないソフトウェア（振る舞い）
+- 完璧に動作しないが変更できるソフトウェア（アーキテクチャ）
 
-型クラスは、振る舞いを定義するインターフェース
+- ソフトウェア＝ソフトであるべき
 
-型クラスのインスタンスである型
-Eq型クラスのインスタンスInt型
+- アイゼンハワーのマトリクス
+  - 振る舞いは、緊急だが重要ではない
+  - アーキテクチャは、緊急ではないが重要である
+  - よくある間違いは、緊急だが重要ではないタスクを最優先してしまうこと
 
-型クラスはアドホック多相(polymorphism)を実現している
+# ソフトウェアアーキテクト
+- 機能よりもその構造を重要視する
+- 機能を簡単に開発・変更・拡張できる構造（アーキテクチャ）を構築する
 
-### アドホック多相
+- コンポーネントの分離
+- データ管理
+- 機能
 
-
-### オブジェクト指向
-importは、どのプログラムに依存しているか見極めるたみに便利
+- ソフトウェアは科学である
+ - テストはバグが存在しないことを実証できないが、バグが存在することは実証できる
+ - つまり反証可能なモジュール単位としての構造が大事
