--- a/content/posts/common/design/00001.md
+++ b/content/posts/common/design/00001.md
@@ -61,3 +61,82 @@ Robert C. Martin
 - ソフトウェアは科学である
  - テストはバグが存在しないことを実証できないが、バグが存在することは実証できる
  - つまり反証可能なモジュール単位としての構造が大事
+
+# ポリモーフィズムの利点＝依存関係逆転の原則
+- 上位レベルの関数が下位レベルの関数を呼び出す場合、依存関係は `上位 -> 下位` だが、インタフェースを使用することで、`下位 -> 上位` に依存する
+- ビジネスルールがUI、DBに依存するのではなく、UI、DBがビジネスルールに依存するが正しい
+  - `UI -> Business Rle <- DB`
+  - 依存関係逆転の原則は、ビジネスルールへの依存を制御する
+  - 独立デプロイ可能性
+- OOは、ポリモーフィズムを使用してソースコードの依存関係を制御する能力のこと
+
+# 関数型プログラミング
+- 不変性
+  - 競合、デットロック、並行更新は、可変を許容する変数が原因
+  - 副作用のコンポーネントは分離し、トランザクション制御により、上記の問題は全て失敗させればいい
+
+- イベントソーシング
+  - 状態ではなく取引（トランザクション）を保存する戦略
+  - ソースコードの管理システムと同じ
+  - 関数型である
+
+# SOLID
+## SRP (Single Responsibilty Principle) 単一責任の原則
+- モジュールを変更する理由はひとつだけでなければならない
+- モジュールはひとつのアクターに対して責務を負う
+アクターがポイント
+- 給与システムの例
+```Scala
+class Employee {
+  def calculatePay(pay: Pay): Unit
+  def reportHours(report: Report): Unit
+  def save(data: Data): Unit
+}
+```
+- `calculatePay()` は経理部が使用し、報告先は CFO
+- `reportHours()` は人事部が使用し、報告先は COO
+- `save()` はデータベース管理者が使用し、報告先は CTO
+
+- アクターが異なるため、上記の各メソッドは、別のクラスに分割するべき
+- データと関数に切り分け、分割する
+-> Facadeパターン
+
+```Scala
+class EmployeeFacade {
+  def calculatePay = (new PayCalculator).calculatePay
+  def reportHours = (new HourReporter).reportHours
+  def save = (new EmployeeSaver).saveEmployee
+}
+
+class PayCalculator { def calculatePay = ??? // EmployeeData }
+class HourReporter { def reportHours = ??? // EmployeeData }
+class EmployeeSaver { def saveEmployee = ??? // EmployeeData }
+
+class EmployeeData {}
+```
+
+
+```Scala
+// データを内部にもつFacade
+class EmployeeFacade {
+  val employData: EmployeeData = new EmployeeData()
+  def calculatePay = (new PayCalculator).calculatePay
+  def reportHours = (new HourReporter).reportHours
+  def save = ???
+}
+
+class PayCalculator { def calculatePay = ??? // EmployeeData }
+class HourReporter { def reportHours = ??? // EmployeeData }
+
+class EmployeeData {}
+```
+
+## OCP (Open-Closed Principle) オープン・クローズドの原則
+- モジュールは
+
+## LSP (Liskov Substitution Principle) リスコフの置換原則
+
+## ISP (Interface Segregation Principle) インタフェース分離の原則
+
+## DIP (Dependency Inversion Principle) 依存関係逆転の原則
+- 下位レベルのモジュールは、上位レベルのモジュールに依存するべき
