--- a/content/posts/common/design/00001.md
+++ b/content/posts/common/design/00001.md
@@ -65,7 +65,7 @@ Robert C. Martin
 # ポリモーフィズムの利点＝依存関係逆転の原則
 - 上位レベルの関数が下位レベルの関数を呼び出す場合、依存関係は `上位 -> 下位` だが、インタフェースを使用することで、`下位 -> 上位` に依存する
 - ビジネスルールがUI、DBに依存するのではなく、UI、DBがビジネスルールに依存するが正しい
-  - `UI -> Business Rle <- DB`
+  - `UI -> Business Rule <- DB`
   - 依存関係逆転の原則は、ビジネスルールへの依存を制御する
   - 独立デプロイ可能性
 - OOは、ポリモーフィズムを使用してソースコードの依存関係を制御する能力のこと
