--- a/content/posts/frontend/vue/00002.md
+++ b/content/posts/frontend/vue/00002.md
@@ -5,8 +5,26 @@ showDate: true
 tags: ["Vue.js"]
 ---
 
+# 意識すべきこと
+- 構造の本体は、DOMではなく、JavaScriptのデータ
+  - 先にDOMが存在するのではなく、データの状態に適したDOMを構築する
+- DOMの構築手段としてテンプレートを使用する
+- テンプレートとロジックを関連付けるのが、ディレクティブ（@click, :class...）
+- DOMの状態を管理・更新するデータバインディング
+- 単一ファイルコンポーネント
+
+# 豊富なリソース
+- Awesome Vue Github
+- Vue Curated
+- Element
+- Onsen UI
+- 
+
 # 双方向データバインディング
 - ここでいうデータバインディングとは、UIとデータを紐付けること
 - 双方向とは、UIが変わればデータが変わり、データが変わればUIも変わる
 
-# 
+- Codepen
+- JSFiddle
+- CodeSandbox
+- vue dev tool
