--- a/content/posts/backend/scala/00006.md
+++ b/content/posts/backend/scala/00006.md
@@ -1,5 +1,5 @@
 ---
-title: Scala Spark
+title: Apache Spark for Scala 使ってみた
 date: 2018-17-01T18:50:00+09:00
 showDate: true
 tags: ["Scala", "Spark"]
