--- a/content/posts/backend/scala/00007.md
+++ b/content/posts/backend/scala/00007.md
@@ -17,4 +17,4 @@ tags: ["Scala"]
 - [複数のJVM上で動作させるAkkaシステムのテスティングプラグイン](https://doc.akka.io/docs/akka/2.5/multi-jvm-testing.html)
 
 ## sbt-hoge
-- [fo](##sbt-native-packager)
+- [foo](#sbt-native-packager)
