--- a/content/posts/devops/aws/00001.md
+++ b/content/posts/devops/aws/00001.md
@@ -30,5 +30,19 @@ Anthyの6桁の数字を認証コード1に入力する
 
 ここから
 
-# hoge
-## hoge
+# CloudTrail
+## 概要
+- デフォルトで有効になっている機能
+- 90日分の以下２種類のログ
+- 管理イベント
+  - EC2インスタンスの作成、S3バケットの作成など
+- データイベント
+  - S3バケット上のデータ操作、Lambda関数の実行など
+- S3に保存することができる（エビデンス残し）
+- 管理イベントのみデフォルトで有効になっている
+
+# S3
+- S3名はグローバルユニーク
+
+# 料金アラート
+# CloudWatch
