--- a/content/posts/backend/scala/00007.md
+++ b/content/posts/backend/scala/00007.md
@@ -5,6 +5,7 @@ showDate: true
 tags: ["Scala"]
 ---
 
+# plugins
 ## sbt-native-packager
 - Dockerイメージを作成できる
   - https://qiita.com/takebayashi/items/99dcf293423a27caa73a 
@@ -18,3 +19,21 @@ tags: ["Scala"]
 
 ## sbt-hoge
 - [foo](#sbt-native-packager)
+
+# ScalaOption
+## `-feature`
+
+## `-deprecation`
+
+## `-unchecked`
+
+## `-Xfatal-warnings`
+
+## `-Xlint`
+
+# sbt new
+## シングルプロジェクト作成コマンド
+`$ sbt new sbt/scala-seed.g8`
+
+## マルチプロジェクト作成コマンド
+`$ sbt new mattsu6/multi-sbt.g8`
