--- a/content/posts/backend/akka/00001.md
+++ b/content/posts/backend/akka/00001.md
@@ -64,3 +64,12 @@ CPUがどんな様子で処理をするのか？という観点において、
 #### フェイルオーバー
 - 稼働中のシステムで問題が生じてシステムやサーバーが停止してしまった際に、自動的に待機システムに切り替える仕組みをいいます。HA機能ともいわれ、システムの可用性を高めるための冗長化の一つです。
   // TODO
+  
+# Akka によるスケール
+- ここでは、アクターをオブジェクトとして理解しておく
+- インメモリ状態を使い続ける
+- 状態の変更は、メッセージとしてログに送られる
+
+// TODO
+
+CPUがどんな様子で処理をするのか？という観点において、
