--- a/content/posts/common/network/00003.md
+++ b/content/posts/common/network/00003.md
@@ -8,4 +8,5 @@ tags: ["network"]
 ## DNSラウンドロビン
 - ドメイン名とIPアドレスを 1:n で対応付けること
 - hoge.co.jp = 192.168.1.1, 192.168.1.2, 192.168.1.3
-
+- ドメインへのアクセス時には、n のサーバへ負荷分散される
+- RFC3484
