--- a/content/posts/backend/akka/00001.md
+++ b/content/posts/backend/akka/00001.md
@@ -5,25 +5,28 @@ showDate: true
 tags: ["Akka", "Scala"]
 ---
 
-- sample code   
-https://github.com/akka-ja/akka-in-action
-
-## Akkaとは
+# Akkaとは
 - 並行・分散アプリケーションをシンプルに単一のモデルで実装するプログラミングモデルであるアクタープログラミングモデルを提供する
 - アクターはスケールアップとスケールアウトのためのプログラミングモデル  
-#### アクター概要
+
+## アクター概要
 - メッセージキューに似ている  
 - アクターは1通ずつメッセージを受信し、その都度何らかの振る舞いを実行する  
 - アクターは他のアクターにメッセージを送ることができる(キューとは異なる)
 - 全て非同期
-=> **メッセージの送受信でアプリケーションを構築する**
-=> **メッセージは、ローカルスレッドまたは、リモートスレッド(別のサーバ)で処理する**
+- **メッセージの送受信でアプリケーションを構築する**
+- **メッセージは、ローカルスレッドまたは、リモートスレッド(別のサーバ)で処理する**
 
-(補足 )リアクティブ宣言
+## リアクティブ (宣言)
+- ブロッキングI/Oは並列化を制限するため → **ノンブロッキングI/O**
+- 同期処理は並列化を制限するため → **非同期**
+- ポーリングはリソース消費機会を減らしてしまうため → **イベント駆動**
+- 回復力(レジリエンス)
+- 弾力性(需要が小さければリソース減、需要が大きければリソース増)
 
-### アクターシステム
-Akkaのアプリケーションで最初に行うことはアクターシステムを作成すること
-アプリケーション内の全てのアクターに対してトップレベルアクターを１つだけ作成するのが一般的なパターン
+## アクターシステム
+- Akkaのアプリケーションで最初に行うことはアクターシステムを作成すること
+- アプリケーション内の全てのアクターに対してトップレベルアクターを１つだけ作成するのが一般的なパターン
 ```
 val supervisor = ActorSystem("TeamChat")
 ```
@@ -32,7 +35,7 @@ ActorRefは、アクターにメッセージを送信するためのアドレス
 アクターパスはURLパス構造とアクターの階層をマッピングできる
 メッセージはActorRefに送信され、メールボックス（キュー）に到着順に保存する
 
-### ディスパッチャー
+## ディスパッチャー
 アクターはディスパッチャーによってある時呼び出される
 ディスパッチャーはメールボックス内のメッセージをアクターにプッシュする
 アクターは落ちてきたメッセージを処理する
@@ -41,8 +44,11 @@ ActorRefは、アクターにメッセージを送信するためのアドレス
 アクターにメッセージを送信するときは、メールボックスにメッセージを残すだけ
 ディスパッチャーがアクターにメッセージをプッシュする
 
-## 用語
-####  並行と並列
+## 並行処理の歴史
+- OSのプロセスによる並行処理
+- スレッドによる並行処理
+
+### 並行と並列
 CPUがどんな様子で処理をするのか？という観点において、
 - 並行(Concurrent)  
   ある1つの時点で、複数タスクを切り替えることで同時処理を見せかけている
@@ -73,3 +79,10 @@ CPUがどんな様子で処理をするのか？という観点において、
 // TODO
 
 CPUがどんな様子で処理をするのか？という観点において、
+
+
+## 参考になる資料
+- https://www.slideshare.net/sifue/akka-39611889
+
+- sample code   
+https://github.com/akka-ja/akka-in-action
