--- a/content/posts/backend/scala/00005.md
+++ b/content/posts/backend/scala/00005.md
@@ -102,3 +102,7 @@ class ClassE extends {
 # 型パラメータ(type parameter)
 - クラスが受け取ることのできるパラメータ
 - 命名規則としては、A.B..の順が多い
+
+# 共変(covariant)
+- 何も指定しない場合、非変(invariant)になる
+- 配列は Java では共変だが、Scala では非変
