--- a/content/posts/devops/elasticsearch/00002.md
+++ b/content/posts/devops/elasticsearch/00002.md
@@ -5,4 +5,86 @@ showDate: true
 tags: ["elasticsearch"]
 ---
 
-## TODO
+# Elasticsearch
+- 全文検索エンジン
+- ログ収集・解析・分析プラットフォーム
+
+## 全文検索
+- 索引型検索
+- 転置インデックス（各単語と出現した文書IDの組み合わせをインデックスとして保存）
+  ```
+  Doc1: イベントが東京で開催される
+  Doc2: 東京マラソンに参加する
+  ```
+  ```
+  |   単語   | DocId |
+  | 東京     | 1, 2  |
+  | イベント | 1     |
+  | マラソン | 2     |
+  ```
+- 各単語は、英語の場合：空白区切り、日本語の場合：形態素解析
+
+- インデクサ (indexer)
+  - 対象ドキュメントから、単語を抽出し、インデックスのデータベースを構成
+  - メタデータとして、検索キーワードと関連ドキュメントを格納
+
+- サーチャー (searcher)
+  - インデクサが構成したインデックスに基づいて、検索クエリの機能を提供
+  - 検索サーバを利用するフロントエンドに対して、Java API、REST APIなどのインタフェースを公開
+
+- クローラー (crawler)
+  - 検索対象となるサイトからドキュメントを収集
+  - 定期巡回によるインデックス更新（インデクサに渡す）
+
+# 概念
+## ドキュメント (Document)
+  - 格納される1つの文書
+  - Jsonオブジェクト形式
+  - ドキュメントをElasticsearchへ格納するときには、IDが採番される
+  - IDはインデックスへの格納時に明示的に指定することが可能
+
+## フィールド
+  - 文字列、数値、日付などの基本データ型、配列、ネスト構造などのデータ型もサポートされている
+  - text型
+    - 文字列からなる文書を格納するデータ型
+    - ニュース記事の本文、商品説明、Blogエントリ本文などに使える
+    - 格納時に Analyzer によって単語に分割され、分割された単語ごとに転置インデックスが構成される
+    - クエリの際には、単語を指定することが可能
+  - keyword型
+    - text型と同様に文書を格納するデータ型
+    - Analyzer による分割処理は行われない
+    - クエリの際には、文書の完全一致で指定する
+  - マルチフィールド型
+    - 1つのフィールドに、text型、keyword型などの複数のデータ型を指定できる型
+    - マッピング定義で明示的に型を指定しない場合は、暗黙的にマルチフィールド型になる
+
+## インデックス
+- ドキュメントの格納場所
+
+## ドキュメントタイプ
+- ドキュメントの構造を表す抽象概念
+- フィールドの型や属性情報などのデータ構造が定義されたもの
+- 1つのインデックスに定義できるドキュメントタイプは1つ
+
+## マッピング
+- ドキュメント内の各フィールドのデータ構造、データ型を記述した情報のこと
+- マッピング定義をコマンドで行える  
+  ```Json
+  $ curl -XPUT http://localhost:9200/my_index/_mapping/tweet -H 'Content-Type: application/json' -d
+  {
+    "properties" : {
+       "user_name" : { "type" : "text" },
+       "message" : { "type" : "text" }
+    }
+  }
+  ```
+  - 事前にマッピング定義しない場合、Elasticsearchが型推論によるマッピング定義を行う
+
+# 物理概念
+## ノード
+
+## クラスタ
+
+## シャード
+
+## レプリカ
