--- a/content/posts/devops/elasticsearch/00003.md
+++ b/content/posts/devops/elasticsearch/00003.md
@@ -5,6 +5,31 @@ showDate: true
 tags: ["elasticsearch"]
 ---
 
+# LOCAL
+```
+$ cd elastic_sandbox
+$ curl -L -O https://download.elastic.co/elasticsearch/release/org/elasticsearch/distribution/tar/elasticsearch/6.4.3/elasticsearch-6.4.3.tar.gz
+```
+
+# LOCAL & Docker
+## DockerコンテナでElasticsearchを起動する
+- ダウンロード & 起動
+```
+$ docker pull docker.elastic.co/elasticsearch/elasticsearch:6.2.1
+$ docker run -d -p 9200:9200 -p 9300:9300 -e "discovery.type=single-node" docker.elastic.co/elasticsearch/elasticsearch:6.2.1
+```
+- 確認
+```
+$ docker ps
+```
+- http://localhost:9200/
+
+## Hoge
+```
+$ docker exec -it [コンテナ名] /bin/bash
+```
+
+# AWS
 ## Elasticsearch
 新しいドメインの作成
 - 新しいドメインの定義 -> ドメイン名：movies、 バージョン：最新
@@ -15,4 +40,4 @@ tags: ["elasticsearch"]
 - アクセスの設定 -> 
   - ネットワーク構成 -> パブリックアクセス、 ノード間の暗号化：OFF
   - Kibana認証 -> OFF
-  - アクセスポリシー -> ドメインアクセスポリシーの設定 -> 特定の IP からのドメインへのアクセスを許可：パブリックIPを入力
+  - アクセスポリシー -> ドメインアクセスポリシーの設定 -> 特定のIPからのドメインへのアクセスを許可：パブリックIPを入力
