--- a/content/posts/devops/aws/00004.md
+++ b/content/posts/devops/aws/00004.md
@@ -5,7 +5,12 @@ showDate: true
 tags: ["AWS"]
 ---
 
-# AWS CLI Profile
+# Flow
+- Change AWS CLI Profile
+- Create CloudFormation Template
+- Create Stack
+
+# Change AWS CLI Profile
 - 管理コンソールより(root)、認証情報からIAMユーザのアクセスキーとシークレットアクセスキーを取得する
   (シークレットアクセスキーは、アクセスキーの生成時に一度しか表示されるないため、紛失した場合は、再度アクセスキーを取得し直す)
 - ローカルのAWSプロファイルを更新する
@@ -17,10 +22,13 @@ tags: ["AWS"]
   Default output format [None]:json
   ```
 
-https://dev.classmethod.jp/cloud/aws/cloudformation-beginner01/
+# Create CloudFormation Template
 
-# EC2
+https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-template-resource-type-ref.html
+
+```
 
 ```
 
-```
+# Create Stack
+- テンプレートとスタックは、オブジェクト指向でいうところの、クラスとインスタンスに近いイメージ
