--- a/content/posts/devops/elasticsearch/00003.md
+++ b/content/posts/devops/elasticsearch/00003.md
@@ -31,13 +31,39 @@ $ docker exec -it [コンテナ名] /bin/bash
 
 # AWS
 ## Elasticsearch
-新しいドメインの作成
-- 新しいドメインの定義 -> ドメイン名：movies、 バージョン：最新
-- クラスターの設定 -> 
-  - ノードの設定 -> インスタンス数：1、 インスタンスタイプ：t2.small.elasticsearch、 専用マスター有効化：OFF、 ゾーン対応の有効化：OFF
-  - ストレージ設定 -> ストレージタイプ：EBS、 EBSボリュームタイプ：汎用(SSD)、 EBSボリュームサイズ：１０、 保存時の暗号化の有効化：OFF
-  - スナップショットの設定 -> 自動スナップショットの開始時間：デフォルト
-- アクセスの設定 -> 
-  - ネットワーク構成 -> パブリックアクセス、 ノード間の暗号化：OFF
-  - Kibana認証 -> OFF
-  - アクセスポリシー -> ドメインアクセスポリシーの設定 -> 特定のIPからのドメインへのアクセスを許可：パブリックIPを入力
+### 新しいドメインの定義  
+- ドメイン名:pureone  
+- バージョン:最新  
+
+-> Next  
+
+### クラスターの設定
+- ノードの設定  
+  - インスタンス数:1
+  - インスタンスタイプ:t2.small.elasticsearch
+  - 専用マスター有効化:OFF
+  - ゾーン対応の有効化:OFF
+- ストレージ設定  
+  - ストレージタイプ:EBS
+  - EBSボリュームタイプ:汎用(SSD)
+  - EBSボリュームサイズ:１０
+  - 保存時の暗号化の有効化:OFF
+- スナップショットの設定  
+  自動スナップショットの開始時間:デフォルト
+
+-> Next  
+
+### アクセスの設定
+- ネットワーク構成  
+  - パブリックアクセス
+  - ノード間の暗号化：OFF
+- Kibana認証  
+  - OFF
+- アクセスポリシー  
+  - ドメインアクセスポリシーの設定  
+    - 特定のIPからのドメインへのアクセスを許可：パブリックIPを入力(ブラウザで自分のIPを検索)
+
+-> Next  
+
+### 確認
+- OK
