--- a/content/posts/devops/elasticsearch/00003.md
+++ b/content/posts/devops/elasticsearch/00003.md
@@ -5,39 +5,14 @@ showDate: true
 tags: ["elasticsearch"]
 ---
 
-# LOCAL
-```
-$ cd elastic_sandbox
-$ curl -L -O https://download.elastic.co/elasticsearch/release/org/elasticsearch/distribution/tar/elasticsearch/6.4.3/elasticsearch-6.4.3.tar.gz
-```
-
-# LOCAL & Docker
-## DockerコンテナでElasticsearchを起動する
-- ダウンロード & 起動
-```
-$ docker pull docker.elastic.co/elasticsearch/elasticsearch:6.2.1
-$ docker run -d -p 9200:9200 -p 9300:9300 -e "discovery.type=single-node" docker.elastic.co/elasticsearch/elasticsearch:6.2.1
-```
-- 確認
-```
-$ docker ps
-```
-- http://localhost:9200/
-
-## Hoge
-```
-$ docker exec -it [コンテナ名] /bin/bash
-```
-
-# AWS
-## Elasticsearch
-### 新しいドメインの定義  
+# 構築
+## 新しいドメインの定義  
 - ドメイン名:pureone  
 - バージョン:最新  
 
 -> Next  
 
-### クラスターの設定
+## クラスターの設定
 - ノードの設定  
   - インスタンス数:1
   - インスタンスタイプ:t2.small.elasticsearch
@@ -53,7 +28,7 @@ $ docker exec -it [コンテナ名] /bin/bash
 
 -> Next  
 
-### アクセスの設定
+## アクセスの設定
 - ネットワーク構成  
   - パブリックアクセス
   - ノード間の暗号化：OFF
@@ -65,5 +40,5 @@ $ docker exec -it [コンテナ名] /bin/bash
 
 -> Next  
 
-### 確認
+## 確認
 - OK
