--- a/content/posts/devops/elasticsearch/00001.md
+++ b/content/posts/devops/elasticsearch/00001.md
@@ -79,4 +79,21 @@ PUT /library/books/1
 }
 ```
 
+# LOCAL & Docker
+## DockerコンテナでElasticsearchを起動する
+- ダウンロード & 起動
+```
+$ docker pull docker.elastic.co/elasticsearch/elasticsearch:6.2.1
+$ docker run -d -p 9200:9200 -p 9300:9300 -e "discovery.type=single-node" docker.elastic.co/elasticsearch/elasticsearch:6.2.1
+```
+- 確認
+```
+$ docker ps
+```
+- http://localhost:9200/
+
+## Hoge
+```
+$ docker exec -it [コンテナ名] /bin/bash
+```
 
