--- a/content/posts/devops/elasticsearch/00003.md
+++ b/content/posts/devops/elasticsearch/00003.md
@@ -42,3 +42,15 @@ tags: ["elasticsearch"]
 
 ## 確認
 - OK
+
+# 操作
+## インデックスの作成
+```
+$ curl -XPUT ELASTICSEARCH_DOMAIN_ENDPOINT/INDEX/_doc/1 -d '{
+  "director": "Burton, Tim",
+  "genre": ["Comedy","Sci-Fi"],
+  "year": 1996,
+  "actor": ["Jack Nicholson","Pierce Brosnan","Sarah Jessica Parker"],
+  "title": "Mars Attacks!"
+}' -H 'Content-Type: application/json'
+```
