--- a/content/posts/devops/elasticsearch/00003.md
+++ b/content/posts/devops/elasticsearch/00003.md
@@ -44,13 +44,49 @@ tags: ["elasticsearch"]
 - OK
 
 # 操作
+
+https://dev.classmethod.jp/server-side/elasticsearch/use-kibana-on-aws/
+
 ## インデックスの作成
+```shell
+$ curl -XPUT ELASTICSEARCH_DOMAIN_ENDPOINT/shakespeare/_doc/1 -d '{
+ "mappings" : {
+  "_default_" : {
+   "properties" : {
+    "speaker" : {"type": "string", "index" : "not_analyzed" },
+    "play_name" : {"type": "string", "index" : "not_analyzed" },
+    "line_id" : { "type" : "integer" },
+    "speech_number" : { "type" : "integer" }
+   }
+  }
+ }
+}' -H 'Content-Type: application/json'
 ```
-$ curl -XPUT ELASTICSEARCH_DOMAIN_ENDPOINT/INDEX/_doc/1 -d '{
-  "director": "Burton, Tim",
-  "genre": ["Comedy","Sci-Fi"],
-  "year": 1996,
-  "actor": ["Jack Nicholson","Pierce Brosnan","Sarah Jessica Parker"],
-  "title": "Mars Attacks!"
+
+## データインポート
+- [Jsonデータ](https://www.elastic.co/guide/en/kibana/3.0/snippets/shakespeare.json)
+```shell
+$ curl -XPUT ELASTICSEARCH_DOMAIN_ENDPOINT/_bulk --data-binary @shakespeare.json
+```
+[HTTP リクエストペイロードの制限](https://docs.aws.amazon.com/ja_jp/elasticsearch-service/latest/developerguide/aes-limits.html)により、10MB を超えたため、エラーが発生。データを変更するかプランを変更するか。。。一旦放置。
+
+## 形態素解析
+```
+$ curl -XPOST ELASTICSEARCH_DOMAIN_ENDPOINT/kuromoji/ -d'
+  "index":{
+    "analysis":{
+      "tokenizer" : {
+        "kuromoji" : {
+          "type" : "kuromoji_tokenizer"
+        }
+      },
+      "analyzer" : {
+        "analyzer" : {
+          "type" : "custom",
+          "tokenizer" : "kuromoji"
+        }
+      }
+    }
+  }
 }' -H 'Content-Type: application/json'
 ```
