--- a/content/posts/backend/scala/00004.md
+++ b/content/posts/backend/scala/00004.md
@@ -36,13 +36,63 @@ $ brew install sbt
 $ brew install git
 ```
 
-## bashrc bash_profile Create
 ```
-$ ~/.bash_profile
+$ mkdir ~/repository
+$ mkdir ~/repository/office
+$ mkdir ~/repository/pureone
 ```
 
 ```
-$ ~/.bashrc
+$ vi ~/repository/office/.gitconfig
+[user]
+  name = j-tsuchiya-is
+  email = j_tsuchiya@interspace.ne.jp
+$ vi ~/repository/pureone/.gitconfig
+[user]
+  name = pureone-t
+  email = pureone.ttt@gmail.com
+```
+
+```
+$ vi ~/.gitconfig
+[includeIf "gitdir:~/repository/office/"]
+  path = ~/repository/office/.gitconfig
+[includeIf "gitdir:~/repository/pureone/"]
+  path = ~/repository/pureone/.gitconfig
+```
+
+## bashrc bash_profile Create
+```
+$ vi ~/.bash_profile
+# PATH
+if [ -f ~/.bashrc ]; then
+ . ~/.bashrc
+fi
+```
+
+```
+$ vi ~/.bashrc
+# Alias Setting
+alias ls='ls -FG'
+alias ll='ls -alFG'
+
+# Permmision View Setting
+if [ $UID -eq 0 ]; then
+   PS1="\[\033[31m\]\u@\h\[\033[00m\]:\[\033[01m\]\w\[\033[00m\]\\$ "
+else
+   PS1="\[\033[36m\]\u@\h\[\033[00m\]:\[\033[01m\]\w\[\033[00m\]\\$ "
+fi
+
+#for bash_completion
+if [ -f $(brew --prefix)/etc/bash_completion ]; then
+ source $(brew --prefix)/etc/bash_completion
+fi
+
+# git ps1
+source /usr/local/etc/bash_completion.d/git-prompt.sh
+source /usr/local/etc/bash_completion.d/git-completion.bash
+GIT_PS1_SHOWDIRTYSTATE=true
+export PS1='\[\033[37m\][\[\033[36m\]\u\[\033[37m\]@\h \[\033[32m\]\W\[\033[37m\]]\[\033[31m\]$(__git_ps1)\[\033[00m\]\$ '
 ```
 
 ```
