--- a/content/posts/backend/scala/00004.md
+++ b/content/posts/backend/scala/00004.md
@@ -6,13 +6,15 @@ tags: ["Scala"]
 ---
 
 # Scala環境構築
+[オンラインのサービスとして使用する場合はこちら]()
+
 
 ## Homebrew Install
 ```
 $ /usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
 ```
 
-- command line tool はアップデートされるため、Xcodeのインストール、`xcode-select --install`
+- command line tool はアップデートされるため、Xcodeのインストール、`xcode-select --install`される
 
 ```
 $ brew doctor
@@ -98,3 +100,6 @@ export PS1='\[\033[37m\][\[\033[36m\]\u\[\033[37m\]@\h \[\033[32m\]\W\[\033[37m\
 ```
 $ source .bashrc
 ```
+
+## Scala プロジェクトの
+https://www.scala-sbt.org/1.0/docs/sbt-new-and-Templates.html
