--- a/content/posts/backend/scala/00004.md
+++ b/content/posts/backend/scala/00004.md
@@ -6,7 +6,7 @@ tags: ["Scala"]
 ---
 
 # Scala環境構築
-[オンラインのサービスとして使用する場合はこちら]()
+[オンラインのサービスとして使用する場合はこちら](https://scastie.scala-lang.org/)
 
 
 ## Homebrew Install
