--- a/content/posts/common/network/00002.md
+++ b/content/posts/common/network/00002.md
@@ -5,6 +5,82 @@ showDate: true
 tags: ["network"]
 ---
 
+## Macアドレス
+- ネットワーク部品に割り当てられたアドレス
+- 48ビットのアドレス
+- 先頭24ビットは、部品メーカーの識別番号
+- 後半24ビットは、TODO
+- 16進数表記
+- OSIの第2層のデータリンク層
+
+## OSI
+### レイヤー7:アプリケーション層
+- アプリケーションに特化したプロトコルを規定
+- HTTP
+- メール送信のSMTP
+
+### レイヤー6:プレゼンテーション層
+- データの表現形式を規定
+- データ保存形式、圧縮、文字コード
+
+### レイヤー5:セッション層
+- コネクション確立、データ転送のタイミングを規定
+
+### レイヤー4:トランスポート層
+- データ転送の制御を規定
+- TCP/IP
+
+### レイヤー3:ネットワーク層
+- IPアドレス
+- 異なるネットワークへデータを転送するルーティングの制御
+- ルーター、レイヤー3スイッチ
+- パケットをどこからどこに転送するかの情報＝ルーティングテーブルを管理
+
+### レイヤー2:データリンク層
+- MACアドレスによるデータ転送
+- 同じネットワーク内（同一セグメント内）にあるノード間の通信を規定する
+- レイヤー2スイッチ
+- 通信したいノードがどのポートに繋がっているかをMACアドレスによって判断してパケットを転送している
+
+### レイヤー1:物理層
+- ケーブルやコネクタの形状を規定
+- 100BASE-T(イーサネット)
+
+## ファイヤーウォール
+### パケットフィルタ
+- IPアドレス、ポート番号を元にフィルタリング
+  - 80(http), 443(https)のみパケットの通過を許可
+- パケットフィルタリングのルールのことをACL
+
+### アプリケーションゲートウェイ
+- プロキシのこと
+
+## Linux
+- メモリ上に展開してプログラムをプロセス（PID）
+- ハードディスに割り当てる仮想メモリのことをスワップ
+
+### FHS（ディレクトリ構成）
+- /bin
+  - 基本コマンドを格納したディレクトリ
+- /boot
+  - OS起動に必要なファイルを格納したディレクトリ、vmlinuzがLinuxカーネルの正体
+- /dev
+  - デバイスを格納したディレクトリ、dev/nullは、何もないを表す
+- /etc
+  - OSやアプリケーションの設定ファイルを格納したディレクトリ、Webサーバを起動するHttpデーモンの設定など
+- /home
+  - ユーザを格納したディレクトリ
+- /proc
+  - カーネルやプロセス情報を格納したディレクトリ
+- /sbin
+  - システム管理用コマンドを格納したディレクトリ、reboot,mount、usr/sibn、usr/local/sbinにも配置される
+- /tmp
+  - 一時ファイルを格納したディレクトリ
+- /usr
+  - アプリケーションを格納したディレクトリ
+- /var
+  - ログとかを格納したディレクトリ
+
 ## ドメイン名
 - インターネット上のネットワークを一意に識別するための名称  
   ex.) 違うマンションなのに住所が一緒だと困る
