--- a/content/posts/industry/ad/00001.md
+++ b/content/posts/industry/ad/00001.md
@@ -6,6 +6,9 @@ tags: ["ad"]
 ---
 
 # 用語
+
+http://free-web-hope.com/listing-basic-terms
+
 | NAME | DESCRIPTION |
 |---|---|
 | imp                      | **広告**の表示回数（媒体社のメディアの表示回数ではない？＝PV） |
@@ -13,7 +16,7 @@ tags: ["ad"]
 | CTR (Click Through Rate) | クリック率 `= CT / imp` |
 | CV (Conversion)          | hoge |
 | CVR (Conversion Rate)    | hoge |
-| hoge | hoge |
+| CPA (Cost Per Action) | コンバージョン（CV）1件あたりにかかった広告費用を示す値 |
 | hoge | hoge |
 | hoge | hoge |
 
@@ -21,3 +24,9 @@ tags: ["ad"]
 - 検索されるキーワードに対して入札を行う
   - キーワードに対し、1クリック当たりいくらまでなら広告料金を支払って良いかを決めて、設定する
   - 最低入札価格以上の価格に設定する必要がある
+
+# KGI (Key Goal Indicator)
+- ゴールを測る指標
+
+# KPI (Key Performance Indicator)
+- KGIプロセスの状態を測る指標
