--- a/content/posts/devops/aws/00002.md
+++ b/content/posts/devops/aws/00002.md
@@ -5,16 +5,16 @@ showDate: true
 tags: ["AWS"]
 ---
 
-### about
+# About
 AWSリソースをコマンドラインから操作できるツール
 
-### install
+# Install
 ```
 $ brew install python
 $ brew install awscli
 ```
 
-### configure
+# Configure
 ```
 $ aws configure
 AWS Access Key ID [None]: accesskeyId1
@@ -52,7 +52,7 @@ region=us-east-1
 output=text
 ```
 
-### switch
+# Switch
 ```
 $ export AWS_DEFAULT_PROFILE='user2'
 ```
