Update and rename 00004.md to 00001.md

--- a/content/posts/backend/scala/00001.md
+++ b/content/posts/backend/scala/00001.md
@@ -1,13 +1,12 @@
 ---
-title: MacでScala開発環境を構築する 
+title: Scalaローカル開発環境構築 
 date: 2018-10-14T11:35:00+09:00
 showDate: true
 tags: ["Scala"]
 ---
 
-# Scala環境構築
-[オンラインのサービスとして使用する場合はこちら](https://scastie.scala-lang.org/)
-
+# 前提
+- Mac OSX
 
 ## Homebrew Install
 ```
@@ -101,5 +100,7 @@ export PS1='\[\033[37m\][\[\033[36m\]\u\[\033[37m\]@\h \[\033[32m\]\W\[\033[37m\
 $ source .bashrc
 ```
 
-## Scala プロジェクトの
+## プロジェクトの雛形を作成
 https://www.scala-sbt.org/1.0/docs/sbt-new-and-Templates.html
+
+## IDE import
