--- a/content/posts/backend/scala/00008.md
+++ b/content/posts/backend/scala/00008.md
@@ -9,3 +9,9 @@ tags: ["Scala"]
 ```
 $ sbt new mattsu6/multi-sbt.g8
 ```
+
+## MySql
+```
+$ docker exec -it CONTAINER_ID /bin/bash
+$ mysql -u sample -p -D mydb -h localhost -P 3306
+```
