--- a/content/posts/devops/aws/00002.md
+++ b/content/posts/devops/aws/00002.md
@@ -55,4 +55,6 @@ output=text
 # Switch
 ```
 $ export AWS_DEFAULT_PROFILE='user2'
+$ export AWS_ACCESS_KEY_ID=XXX
+$ export AWS_SECRET_ACCESS_KEY=XXX
 ```
