--- a/content/posts/devops/aws/00001.md
+++ b/content/posts/devops/aws/00001.md
@@ -1,11 +1,17 @@
 ---
-title: AWS First Ref
+title: AWS アカウント作成後に実施するリスト
 date: 2018-11-05T10:54:00+09:00
 showDate: true
 tags: ["AWS"]
 ---
 
-# 多要素認証（MFA）の設定
+# アカウント作成後に行うこと
+- [多要素認証（MFA）の設定](#MFAの設定)
+- [IAMユーザ作成](#IAMユーザ作成)
+- [Cloud Trail](#CloudTrail)
+- [料金アラート設定](#料金アラート設定)
+
+# MFAの設定
 ## MFA用のアプリのインストール
 今回はAnthyを使います。
 Anthy を Apple Store からインストールする。  
@@ -28,7 +34,7 @@ Anthyの6桁の数字を認証コード1に入力する
 「仮想MFAの有効化」を選択し、完了  
 ※念のためログインし直す
 
-ここから
+# IAMユーザ作成
 
 # CloudTrail
 ## 概要
@@ -41,8 +47,8 @@ Anthyの6桁の数字を認証コード1に入力する
 - S3に保存することができる（エビデンス残し）
 - 管理イベントのみデフォルトで有効になっている
 
-# S3
+## S3
 - S3名はグローバルユニーク
 
-# 料金アラート
-# CloudWatch
+# 料金アラート設定
+## CloudWatch
