--- a/content/posts/devops/elasticsearch/00002.md
+++ b/content/posts/devops/elasticsearch/00002.md
@@ -81,7 +81,7 @@ Doc2: 東京マラソンに参加する
   - 格納時に Analyzer によって単語に分割され、分割された単語ごとに転置インデックスが構成される
   - クエリの際には、単語を指定することが可能  
   例： ` {"news" : "Powerful hurricane heads toward Ireland."} `
-    
+
 - keyword型
   - text型と同様に文書を格納するデータ型
   - Analyzer による分割処理は行われない
@@ -109,7 +109,7 @@ Doc2: 東京マラソンに参加する
 "city" : ["Tokyo", "Osaka", "Nagoya"]
 "vms" : [{"host" : "web1", "flavor": "small"}, {"host" : "web2", "flavor": "large"}]
 ```
-  
+
 ### マルチフィールド型
 - 1つのフィールドに、text型、keyword型などの複数のデータ型を指定できる型
 - マッピング定義で明示的に型を指定しない場合は、暗黙的にマルチフィールド型になる
@@ -126,18 +126,7 @@ Doc2: 東京マラソンに参加する
 ## マッピング
 - ドキュメント内の各フィールドのデータ構造、データ型を記述した情報のこと
 - マッピング定義をコマンドで行える  
-  ```Json
-  $ curl -XPUT http://localhost:9200/my_index/_mapping/tweet -H 'Content-Type: application/json' -d
-  {
-    "properties" : {
-       "user_name" : { "type" : "text" },
-       "message" : { "type" : "text" }
-    }
-  }
-  ```
 - 事前にマッピング定義しない場合、Elasticsearchが型推論によるマッピング定義を行う
-[](img/00002/img00001.png)
-
 
 # 物理概念
 ## ノード
@@ -147,3 +136,79 @@ Doc2: 東京マラソンに参加する
 ## シャード
 
 ## レプリカ
+
+# インデックスとドキュメントの基本操作
+## インデックス
+- インデックス削除時に`"*"`、`「_all」`を許可しない設定（誤動作防止）
+  `action.destructive_requires_name: true`
+
+## ドキュメントタイプの管理
+- ドキュメントの型、データ構造の定義
+- 実際にバインドする場合をマッピングという（mapping句）  
+```Json
+PUT /sandbox/_template/INDEX_NAME
+{
+  "mappings": {
+    "DOCUMENT_TYPE_NAME": {
+      "properties": {
+        "host": {"type": "keyword"},
+        "uri": {"type": "keyword"},
+        "method": {"type": "keyword"},
+        "accesstime": {"type": "date"}
+      }
+    }
+  }
+}
+```
+
+## インデックステンプレート
+- 名前の異なるインデックス（日付が付与されるなど）間で共通のインデックステンプレートを作成することが可能
+- インデックスを作成するタイミングで定義が反映される
+- `GET /INDEX_NAME/DOCUMENT_TYPE_NAME/_mapping?pretty` で確認
+- テンプレートを複数定義した場合、`order`パラメータの小さい順で適用されるため、`order`パラメータが最大のテンプレートで上書きされる可能性があることに注意する  
+```Json
+PUT /sandbox/_template/my_template
+{
+  "index_patterns": "accesslog-*",
+  "settings": {
+    "number_of_shards": 1
+  },
+  "mappings": {
+    "accesslog_type": {
+      "properties": {
+        "host": {"type": "keyword"},
+        "uri": {"type": "keyword"},
+        "method": {"type": "keyword"},
+        "accesstime": {"type": "date"}
+      }
+    }
+  }
+}
+```
+
+# クエリ
+## 範囲
+`GET API_ENDPOINT/INDEX_NAME/INDEX_TYPE_NAME/_search`
+
+- `/INDEX_NAME/_search` : `INDEX_NAME`を対象に検索
+- `/INDEX_NAME/INDEX_TYPE_NAME/_search` : `INDEX_TYPE_NAME`を対象に検索
+- `/INDEX_NAME1,INDEX_NAME2/_search` : `INDEX_NAME1`、`INDEX_NAME1`を対象に検索
+- `/INDEX_NAME*/_search` : `INDEX_NAME`で始まるインデックスを対象に検索
+- `/_search` : クラスタ内の全てのインデックスを対象に検索
+
+## DSL
+```
+GET API_ENDPOINT/INDEX_NAME/INDEX_TYPE_NAME/_search
+{
+  "query": {QUERY},
+  "from": 0,
+  "size": 10,
+  "sort": [検索結果のソート指定],
+  "_source": [検索結果に含めたいフィールド名を絞る]
+}
+```
+- `query` : クエリ内容をJsonオブジェクトで記載
+- `from` : 検索結果の何番目から表示するのか
+- `size` : 検索結果に含める件数
+- `sort` : 日付順や、複数フィールドにまたがったソートが可能
+- `_source` : 検索結果に含めたいフィールド名を絞る
