--- a/content/posts/devops/elasticsearch/00002.md
+++ b/content/posts/devops/elasticsearch/00002.md
@@ -212,3 +212,142 @@ GET API_ENDPOINT/INDEX_NAME/INDEX_TYPE_NAME/_search
 - `size` : 検索結果に含める件数
 - `sort` : 日付順や、複数フィールドにまたがったソートが可能
 - `_source` : 検索結果に含めたいフィールド名を絞る
+
+## クエリDSLの種類
+
+### 全文検索クエリ
+- `"match_all": {}`
+- `"match"` // 転置インデックスからの検索（text型）
+  - `"operator": "and"` // AND 条件
+  - `"minimum_should_match": 2` // 最低でも何件以上、何%以上
+  - `"match_phrase": one two three` // 順番一致
+  - `"query_string"` // Luceneシンタックス 低レベル検索用
+### Termクエリ
+- `"terms"` // 完全一致検索（keyword型）
+- `"range": ` // 範囲指定  
+  - gte : 以上 
+  - lte : 以下
+  - gt  : より大きい
+  - lt  : より小さい   
+```
+{
+  "query": {
+    "range": {
+      "stock_price": {
+        "gte": "15.00",
+        "lte": "25.00"
+      }
+    }
+  }
+}
+```  
+```
+// 日付指定
+"birthday": {
+  "gte": "2010-10-01",
+  "lte": "2011-05-24"
+}
+```  
+```
+// 1週間以内
+"manufactured_date": {
+  "gte": "now-1w"
+}
+```
+
+### Boolクエリ （複合クエリ）
+```
+{
+  "query": {
+    "bool": {
+      "must": [<基本クエリ>, <基本クエリ>,,,],
+      "should": [<基本クエリ>, <基本クエリ>,,,],
+      "must_not": [<基本クエリ>, <基本クエリ>,,,],
+      "filter": [<基本クエリ>, <基本クエリ>,,,]
+      }
+    }
+  }
+}
+```
+- `"must"` : 必ず含まれているべきクエリ、AND条件と同じ意味
+- `"should"` : いずれかのクエリがヒットすればイイ、OR条件と同じ意味（`minimum_should_match`を使うことも可能）
+- `"must_not"` : 除外クエリ、NOT条件と同じ意味
+- `"filter"` : スコアに関与しない除外（Filterコンテキスト、Queryコンテキスト）
+
+# ソート
+## フィールド名指定のソート
+```
+{
+  "query": {<クエリの検索条件>},
+  "sort": [
+    {"stock_price": {"order" : "desc"}}
+  ]
+}
+```
+## フィールド名を複数指定したソード
+```
+{
+  "query": {<クエリの検索条件>},
+  "sort": [
+    {"stock_price": {"order" : "desc"}},
+    {"founded": {"order" : "asc"}}
+  ]
+}
+```
+
+## スコアに基づいたソード
+```
+{
+  "query": {<クエリの検索条件>},
+  "sort": [
+    {"stock_price": {"order" : "desc"}},
+    "_score"
+  ]
+}
+```
+## 配列型データの計算結果に基づいたソート
+- 配列の値の最小、最大、平均などの計算結果に基づいたソート  
+  - "avg" : 平均
+  - "min" : 最小
+  - "max" : 最大
+  - "sum" : 合計
+  - "median" : メジアン
+```
+// この例では平均
+"sort": [
+  {"dayoff": {"order" : "desc", "mode" : "avg"}}
+]
+```
+
+# 4章 全文検索とAnalyzer
+- インデックスへドキュメント（text型）の格納時（転置インデックスの作成）、検索時の検索文字に対して形態素解析を行う
+
+## ステミング
+- 語形の変化を揃えて同一表現に統一する処理
+- "dogs" -> "dog"
+- "食べる"、"食べた"、"食べます" -> "食べ"
+
+## 正規化
+- 大文字、小文字、カタカナ、ひらがな、全角、半角を揃える処理
+
+## ストップワード
+- 冠詞、前置詞、助詞などの単体で意味を持たない単語を除外する処理
+- Elasticsearchは、標準で`English Analyzer`をサポートしている
+
+## Analyzerの定義
+### マッピング定義で定義
+```
+"mappings":  {
+  "my_type": {
+    "properties": {
+      "blog_message": {
+        "type": "text",
+        "analyzer": "standard"
+      }
+    }
+  }
+}
+```
+
+
+
