--- a/content/posts/devops/elasticsearch/00002.md
+++ b/content/posts/devops/elasticsearch/00002.md
@@ -349,5 +349,75 @@ GET API_ENDPOINT/INDEX_NAME/INDEX_TYPE_NAME/_search
 }
 ```
 
+## Analyzer内部構成
+1. Char filter
+  - 入力テキストの前処理
+  - 文字単位の変換処理
+  - HTML Strip Character Filter ->  タグ除去（<br>とか）
+  - Mapping Character Filter -> 入力文字に含まれる特定文字にマッピングルールを定義し、変換する（例　":)" -> "_happy_"）
+  - Pattern Replace Character Filter -> 正規表現ルールで入力文字を変換する（例 "123-456-789" -> "123_456_789"）
+2. Tokenizer
+ - Char filterの出力データを入力として、テキスト分割処理をし、トークン（単語）の列を生成する
+ - 単語分割用Tokenizer : 
+ - N-gram分割用Tokenizer : 
+ - 構造化テキスト分割用Tokenizer : 
+3. Token filter
+ - Tokenizerが分割したトークン（単語）に対して、トークン単位での変換処理を行うためのフィルタ機能
+ - Lower case Token filter
+   - トークン文字を小文字に変換
+ - Stop Token filter
+   - ストップワードの除去を行うフィルタリング
+ - Stremer Token filter
+   - ステミング処理を行うフィルタ
+ - Synonym Token filter
+   - 類義語（シノニム）を正規化して1つの単語に変換するためのフィルタ
+
+## Analyzerのカスタム定義
+- TODO
+ 
+# Aggregation
+- 検索結果の集合に対して、分類や集計を行うことができる機能
+- ドキュメントを特定のグループに分類することができる
+- そのグループごとの件数、最大値、平均値といった統計量の値を返すことができる
+- 任意のクエリでドキュメントをし盛り込みながら、同時にAggregationを実行する操作が1回のクエリで行える
+
+## Metrics
+- 分類された各グループに対して、最小、最大、平均などの統計値を計算する  
+  
+## Buckets
+- ドキュメントをフィールド値に基づいてグループ化するための分類方法
+  （書籍の価格ごと、書籍のジャンルでグループ化）
+
+## Pipeline
+- Bucketsなどの他のAggregationの結果を用いて、さらに集計をする機能
+
+## Matrix
+- 複数フィールドの値を対象に相関、共分散などの統計値を計算する機能
+
+## 分類と集計の例
+```
+Aggregation Query
+
+Book Index {
+  "タイトル": text,
+  "ジャンル": keyword,
+  "発売日": date,
+  "価格": logn
+}
+```
+| Bucktes（ビジネス） | Metrics（平均価格） |
+|---------|---------|
+| "ビジネス" | 3400 |
+| "文学" | 1350 |
+| "コンピュータ" | 3200 |
+
+
+
+
+
+
+
+
+
 
 
