--- a/content/posts/devops/elasticsearch/00002.md
+++ b/content/posts/devops/elasticsearch/00002.md
@@ -383,10 +383,12 @@ GET API_ENDPOINT/INDEX_NAME/INDEX_TYPE_NAME/_search
 
 ## Metrics
 - 分類された各グループに対して、最小、最大、平均などの統計値を計算する  
-  
+- SQLの`COUNT`に近い
+
 ## Buckets
 - ドキュメントをフィールド値に基づいてグループ化するための分類方法
   （書籍の価格ごと、書籍のジャンルでグループ化）
+- SQLの`GROUP BY`に近い
 
 ## Pipeline
 - Bucketsなどの他のAggregationの結果を用いて、さらに集計をする機能
@@ -411,13 +413,48 @@ Book Index {
 | "文学" | 1350 |
 | "コンピュータ" | 3200 |
 
+## Aggregation文法
+```
+"aggregations": {
+  "<AGGREGATION_NAME>": {
+    "<AGGREGATION_TYPE>": {
+      "<AGGREGATION_BODY>"
+    }
+  }
+}
+```
 
+- `"aggregations"`句は、`"aggs"`と省略可能
+- `"<AGGREGATION_NAME>"`は任意の名前
+- `"<AGGREGATION_TYPE>"`は、`"Metrics"`、`"Buckets"`、`"Pipeline"`、`"Matrix"`の機能タイプを定義する  
+  （`"Metrics"`タイプであれば、`"sum"`、`"avg"`、`"Buckets"`タイプであれば、`"range"`など）
 
+## Metrics文法
+- query句を使う方法
+  - query句でデータセットを絞り込み、Metricsの集計を適用する
+- Bucketsを使う方法
+  - Bucketsを使ってドキュメントをグループ化し、グループ化されたデータセットに対して、それぞれMetricsの集計を適用する
+- 何も指定しない方法
+  - インデックスに格納されているドキュメント全体の統計値を計算する
+- `"size"`に0を指定すると、`"aggs"`の計算結果だけを返すことができる  
+```
+// query句を使う方法
+"size": 0,
+  "query": {
+    "match": {
+      "office": "1"
+    }
+  },
+  "aggs": {
+    "svg_hoge": {
+      "avg": {
+        "field": "salary"
+      }
+    }
+  }
+```
 
-
-
-
-
+ 
 
 
 
