--- a/content/posts/backend/akka/00002.md
+++ b/content/posts/backend/akka/00002.md
@@ -73,3 +73,24 @@ trait RequestTimeout {
   }
 }
 ```
+
+# 2.最小のAkkaアプリケーション
+- この章で学ぶこと
+  - プロジェクトテンプレートの取得
+  - 最小のAkkaアプリケーションをクラウド上に構築
+
+- Akkaのアプリケーションを構築し始めるにあたって知っておくべき重要なポイント
+  - sbtを使ってJARを作成する
+  - 最小規模のチケット販売アプリケーション
+  - スピードに注目！
+TODO
+
+## 2.1 クローンとビルドとテストインターフェース
+本書で扱うソースコードは、全てGitHubで公開している
+
+
+## 2.4 まとめ
+- アクターを利用することで少ない労力（コード量）で、非同期なRESTサービスを構築できる
+
+しかし、、、このままでは、実システムとしては使い物にならない
+- データの永続化ができていない（スケールアウトができない）
