--- a/content/posts/common/network/00005.md
+++ b/content/posts/common/network/00005.md
@@ -1,11 +1,12 @@
 ---
-title: Mac (OSX) SSH接続
+title: ssh
 date: 2018-11-21T18:30:00+09:00
 showDate: true
 tags: ["network", "SSH"]
 ---
 
-# 公開鍵認証
+# Mac (OSX) SSH接続
+## 公開鍵認証
 ```
 $ ssh <IP_ADDRESS|HOST_NAME> -l USER_NAME -i ~/.ssh/id_rsa
 ```
@@ -18,3 +19,16 @@ host HOGE
   IdentityFile ~/.ssh/id_rsa
 $ ssh HOGE
 ```
+
+# ポートフォワード
+- ある特定のコンピュータのポート番号に対して、送られる送信内容を、別のコンピュータのポート番号に転送すること
+- https://www.clear-code.com/blog/2014/9/12.html
+
+## インターネット上の中継サーバを使う方法
+- 
+
+## LAN内の中継サーバを使う方法
+- 
+
+## 
+- 
