--- a/content/posts/devops/elasticsearch/00001.md
+++ b/content/posts/devops/elasticsearch/00001.md
@@ -6,7 +6,7 @@ tags: ["elasticsearch"]
 ---
 
 # 環境構築リスト
-- [ローカル(Mac OSX) + Elasticsearch](#mac Elasticsearch)
+- [ローカル(Mac OSX) + Elasticsearch](#mac-Elasticsearch)
 - [ローカル(Mac OSX) + docker](#ローカル(MacOSX)+docker)
 - [EC2 + docker + Elasticsearch](#EC2+docker+Elasticsearch)
 - [EC2 + docker + Elasticsearch by terraform](#EC2+docker+Elasticsearch+terraform)
