--- a/content/posts/devops/elasticsearch/00001.md
+++ b/content/posts/devops/elasticsearch/00001.md
@@ -6,12 +6,12 @@ tags: ["elasticsearch"]
 ---
 
 # 環境構築リスト
-- [ローカル(Mac OSX) + Elasticsearch](#ローカルMac-&-Elasticsearch)
-- [ローカル(Mac OSX) + docker](#ローカル(MacOSX)+docker)
-- [EC2 + docker + Elasticsearch](#EC2+docker+Elasticsearch)
-- [EC2 + docker + Elasticsearch by terraform](#EC2+docker+Elasticsearch+terraform)
+- [ローカル(Mac OSX) + Elasticsearch](#ローカルMac-Elasticsearch)
+- [ローカル(Mac OSX) + docker](#ローカルMac-docker-Elasticsearch)
+- [EC2 + docker + Elasticsearch](#EC2-docker-Elasticsearch)
+- [EC2 + docker + Elasticsearch by terraform](#EC2-docker-Elasticsearch-terraform)
 
-# ローカルMac & Elasticsearch
+# ローカルMac Elasticsearch
 
 ## Java8 インストール
 ```
@@ -61,7 +61,7 @@ $ kibana
 ```
 - http://localhost:5601/app/kibana
 
-# ローカル(MacOSX)+docker
+# ローカルMac docker Elasticsearch
 - dockerはインストール済み前提
 
 ## docker pull Elasticsearch
@@ -75,7 +75,7 @@ $ docker ps
 ```
 - http://localhost:9200/
 
-# EC2+Docker+Elasticsearch
+# EC2 docker Elasticsearch
 ## docker インストール
 ```
 $ sudo yum update
@@ -111,4 +111,4 @@ docker-compose version 1.23.1, build b02f1306
 ## Elasticsearch環境の構築
 todo
 
-# EC2+docker+Elasticsearch+terraform
+# EC2 docker Elasticsearch terraform
