--- a/content/posts/devops/elasticsearch/00001.md
+++ b/content/posts/devops/elasticsearch/00001.md
@@ -76,6 +76,10 @@ $ docker ps
 - http://localhost:9200/
 
 # EC2 docker Elasticsearch
+
+- 参考にした記事
+https://runble1.com/aws-docker-elasticsearch-kibana/
+
 ## docker インストール
 ```
 $ sudo yum update
@@ -108,7 +112,43 @@ $ docker-compose --version
 docker-compose version 1.23.1, build b02f1306
 ```
 
+## docker-compose.yml
+```
+version: "3"
+services:
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:6.5.0
+    container_name: elasticsearch
+    environment:
+      discovery.type: single-node
+    ports:
+      - "9200:9200"
+    volumes:
+      - es_data:/usr/share/elasticsearch/data
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:6.5.0
+    container_name: kibana
+    environment:
+      ELASTICSEARCH_URL: http://elasticsearch:9200
+    ports:
+      - "5601:5601"
+    depends_on:
+      - elasticsearch
+
+volumes:
+  es_data:
+    driver: local
+```
+
+## アクセス
+`$ curl localhost:9200`
+
+だめ
+
+`http:[AWSのパブリックDNS名]:5601`
+
 ## Elasticsearch環境の構築
-todo
+- 
 
 # EC2 docker Elasticsearch terraform
