--- a/content/posts/devops/elasticsearch/00001.md
+++ b/content/posts/devops/elasticsearch/00001.md
@@ -75,8 +75,31 @@ $ docker ps
 ```
 - http://localhost:9200/
 
-# EC2 docker Elasticsearch
+# ローカルMac docker compose Elasticsearch
+```
+$ sudo yum update -y
+$ sudo yum install git -y
+$ sudo yum install docker -y
+$ docker -v
+$ sudo service docker start
+$ sudo usermod -a -G docker ec2-user
+$ sudo service docker restart
+$ exit
+```
 
+```
+$ sudo curl -L https://github.com/docker/compose/releases/download/1.23.1/docker-compose-`uname -s`-`uname -m` -o /usr/local/bin/docker-compose
+$ sudo chmod +x /usr/local/bin/docker-compose
+```
+
+```
+$ vi docker-compose.yml
+$ 
+```
+
+# EC2 docker Elasticsearch
+- EC2インスタンスは、t2.medium
+- EC2インスタンは、カスタムTCPで5601ポートを解放しておくこと
 - 参考にした記事
 https://runble1.com/aws-docker-elasticsearch-kibana/
 
@@ -142,13 +165,10 @@ volumes:
 ```
 
 ## アクセス
-`$ curl localhost:9200`
+- `$ curl localhost:9200`
+- ブラウザから、http:[AWSのパブリックDNS名]:5601 へアクセス
 
-だめ
+## Logstash
 
-`http:[AWSのパブリックDNS名]:5601`
-
-## Elasticsearch環境の構築
-- 
 
 # EC2 docker Elasticsearch terraform
