--- a/content/posts/devops/elasticsearch/00001.md
+++ b/content/posts/devops/elasticsearch/00001.md
@@ -170,5 +170,61 @@ volumes:
 
 ## Logstash
 
+- logstash on docker sample project
+  - https://github.com/elastic/logstash-docker
+
+- hoge
+
+```
+$ git clone https://github.com/elastic/logstash-docker.git
+$ tree .
+.
+├── LICENSE
+├── Makefile
+├── README.md
+├── bin
+│   ├── elastic-version
+│   └── pytest
+├── build
+│   ├── golang
+│   │   └── Dockerfile
+│   └── logstash
+│       ├── bin
+│       │   └── docker-entrypoint
+│       ├── config
+│       │   ├── log4j2.properties
+│       │   ├── logstash-full.yml
+│       │   ├── logstash-oss.yml
+│       │   └── pipelines.yml
+│       ├── env2yaml
+│       │   └── env2yaml.go
+│       └── pipeline
+│           └── default.conf
+├── examples
+│   └── logstash.conf
+├── requirements.txt
+├── templates
+│   ├── Dockerfile.j2
+│   └── docker-compose.yml.j2
+├── tests
+│   ├── __init__.py
+│   ├── conftest.py
+│   ├── constants.py
+│   ├── docker-compose.yml
+│   ├── fixtures.py
+│   ├── helpers.py
+│   ├── test_basics.py
+│   ├── test_entrypoint.py
+│   ├── test_labels.py
+│   ├── test_process.py
+│   └── test_settings.py
+├── tox.ini
+└── version.json
+
+11 directories, 30 files
+```
+
+- docker-compose.demo.yml
+- examples/elastic-stack-demo/logstash.conf
 
 # EC2 docker Elasticsearch terraform
