--- a/content/posts/devops/elasticsearch/00003.md
+++ b/content/posts/devops/elasticsearch/00003.md
@@ -1,92 +1,6 @@
 ---
-title: Amazon Elasticsearch Service
+title: sim
 date: 2018-11-07T17:30:00+09:00
 showDate: true
 tags: ["elasticsearch"]
 ---
-
-# 構築
-## 新しいドメインの定義  
-- ドメイン名:pureone  
-- バージョン:最新  
-
--> Next  
-
-## クラスターの設定
-- ノードの設定  
-  - インスタンス数:1
-  - インスタンスタイプ:t2.small.elasticsearch
-  - 専用マスター有効化:OFF
-  - ゾーン対応の有効化:OFF
-- ストレージ設定  
-  - ストレージタイプ:EBS
-  - EBSボリュームタイプ:汎用(SSD)
-  - EBSボリュームサイズ:１０
-  - 保存時の暗号化の有効化:OFF
-- スナップショットの設定  
-  自動スナップショットの開始時間:デフォルト
-
--> Next  
-
-## アクセスの設定
-- ネットワーク構成  
-  - パブリックアクセス
-  - ノード間の暗号化：OFF
-- Kibana認証  
-  - OFF
-- アクセスポリシー  
-  - ドメインアクセスポリシーの設定  
-    - 特定のIPからのドメインへのアクセスを許可：パブリックIPを入力(ブラウザで自分のIPを検索)
-
--> Next  
-
-## 確認
-- OK
-
-# 操作
-
-https://dev.classmethod.jp/server-side/elasticsearch/use-kibana-on-aws/
-
-## インデックスの作成
-```shell
-$ curl -XPUT ELASTICSEARCH_DOMAIN_ENDPOINT/shakespeare/_doc/1 -d '{
- "mappings" : {
-  "_default_" : {
-   "properties" : {
-    "speaker" : {"type": "string", "index" : "not_analyzed" },
-    "play_name" : {"type": "string", "index" : "not_analyzed" },
-    "line_id" : { "type" : "integer" },
-    "speech_number" : { "type" : "integer" }
-   }
-  }
- }
-}' -H 'Content-Type: application/json'
-```
-
-## データインポート
-- [Jsonデータ](https://www.elastic.co/guide/en/kibana/3.0/snippets/shakespeare.json)
-```shell
-$ curl -XPUT ELASTICSEARCH_DOMAIN_ENDPOINT/_bulk --data-binary @shakespeare.json
-```
-[HTTP リクエストペイロードの制限](https://docs.aws.amazon.com/ja_jp/elasticsearch-service/latest/developerguide/aes-limits.html)により、10MB を超えたため、エラーが発生。データを変更するかプランを変更するか。。。一旦放置。
-
-## 形態素解析
-```
-$ curl -XPOST ELASTICSEARCH_DOMAIN_ENDPOINT/kuromoji/ -d'
-  "index":{
-    "analysis":{
-      "tokenizer" : {
-        "kuromoji" : {
-          "type" : "kuromoji_tokenizer"
-        }
-      },
-      "analyzer" : {
-        "analyzer" : {
-          "type" : "custom",
-          "tokenizer" : "kuromoji"
-        }
-      }
-    }
-  }
-}' -H 'Content-Type: application/json'
-```
