--- a/content/posts/devops/elasticsearch/00001.md
+++ b/content/posts/devops/elasticsearch/00001.md
@@ -8,6 +8,7 @@ tags: ["elasticsearch"]
 # 環境構築リスト
 - [ローカル(Mac OSX) + Elasticsearch](#ローカルMac-Elasticsearch)
 - [ローカル(Mac OSX) + docker](#ローカルMac-docker-Elasticsearch)
+- [ローカル(Mac OSX) + docker-compose](#ローカルMac-docker-compose-Elasticsearch)
 - [EC2 + docker + Elasticsearch](#EC2-docker-Elasticsearch)
 - [EC2 + docker + Elasticsearch by terraform](#EC2-docker-Elasticsearch-terraform)
 
@@ -75,9 +76,23 @@ $ docker ps
 ```
 - http://localhost:9200/
 
-# ローカルMac docker compose Elasticsearch
+# Local Mac docker ElasticStack
 ```
-$ sudo yum update -y
+Local(Mac OSX)
+ └─docker-compose
+    ├─Elasticsearch(6.5)
+    ├─Kibana(6.5)
+    └─Logstash(6.5)
+```
+
+## docker install
+```
+$ brew install
+```
+
+## docker compose install
+```
+$ yum update -y
 $ sudo yum install git -y
 $ sudo yum install docker -y
 $ docker -v
@@ -87,15 +102,17 @@ $ sudo service docker restart
 $ exit
 ```
 
+## docker compose install
 ```
 $ sudo curl -L https://github.com/docker/compose/releases/download/1.23.1/docker-compose-`uname -s`-`uname -m` -o /usr/local/bin/docker-compose
 $ sudo chmod +x /usr/local/bin/docker-compose
 ```
 
+## docker-compose yml
 ```
 $ vi docker-compose.yml
-$ 
 ```
+
 
 # EC2 docker Elasticsearch
 - EC2インスタンスは、t2.medium
@@ -229,7 +246,7 @@ $ tree .
 
 # EC2 docker Elasticsearch terraform
 
-# 構築
+# Elasticsearch Service
 ## 新しいドメインの定義  
 - ドメイン名:pureone  
 - バージョン:最新  
